[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/levels/base_level/level_controller.gd" type="Script" id=1]
[ext_resource path="res://scripts/levels/base_level/controller.gd" type="Script" id=2]
[ext_resource path="res://scenes/levels/level_gui/level_gui.tscn" type="PackedScene" id=8]

[node name="LevelController" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="World" type="Node2D" parent="."]
pause_mode = 1
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="EnvironmentController" type="Node2D" parent="World"]
script = ExtResource( 2 )

[node name="PlayerController" type="Node2D" parent="World"]
script = ExtResource( 2 )

[node name="EnemyController" type="Node2D" parent="World"]
script = ExtResource( 2 )

[node name="LevelGui" parent="." instance=ExtResource( 8 )]
slider_location = 1

[node name="EndTimer" type="Timer" parent="."]
pause_mode = 1
wait_time = 300.0
one_shot = true

[node name="AdjustTimer" type="Timer" parent="."]
pause_mode = 1
wait_time = 10.0

[connection signal="timeout" from="EndTimer" to="." method="end"]
[connection signal="timeout" from="AdjustTimer" to="." method="update_difficulty"]
